--- a/.github/actions/component-test/action.yml
+++ b/.github/actions/component-test/action.yml
@@ -5,6 +5,9 @@ inputs:
   context-path:
     description: Path to Dockerfile
     required: true
+  folder:
+    description: Name of the folder with the project
+    required: true
   access-token:
     description: Personal access token to access external dependencies 
     required: true
@@ -15,6 +18,13 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Flink States - Check if files has changed
+      uses: tj-actions/changed-files@v40
+      id: changed-files
+      with: 
+        files: |
+          ${{ inputs.folder }}/**
+
     - name: Log in to the Container registry
       uses: docker/login-action@v3
       with:
