--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -7,6 +7,9 @@ on:
         description: The folder containing the project
         required: true
         type: string
+      initial-kafka-topics:
+        required: false
+        type: string
     secrets:
       PAT:
         description: A personal access token for retrieving private packages
@@ -32,4 +35,4 @@ jobs:
         with:
           context-path: ./${{ inputs.folder }}/
           access-token: ${{ secrets.PAT }}
-          initial-kafka-topics: "FlinkStatesInputTopic FlinkStatesOutputTopic-value FlinkStatesOutputTopic-reducing FlinkStatesOutputTopic-aggregating FlinkStatesOutputTopic-list FlinkStatesOutputTopic-map"
+          initial-kafka-topics: ${{ inputs.initial-kafka-topics }}
