--- a/.github/actions/component-test/action.yml
+++ b/.github/actions/component-test/action.yml
@@ -25,7 +25,7 @@ runs:
     - name: Checkout trifork/cheetah-development-infrastructure
       uses: actions/checkout@v4
       with:
-        repository: trifork/cheetah-development-infrastructure
+        repository: trifork/cheetah-development-infrastructure@v1.1.0
         token: ${{ inputs.access-token }}
         path: development-infrastructure
 
