--- a/.github/workflows/run-component-tests.yml
+++ b/.github/workflows/run-component-tests.yml
@@ -19,98 +19,39 @@ jobs:
   should-run:
     uses: trifork/cheetah-infrastructure-utils-workflows/.github/workflows/e2e-should-run.yml@main
 
-  enrich-stream-component-test:
-    name: Enrich Stream
+  run-component-tests:
+    name: Component Tests
     needs: should-run
     if: ${{ needs.should-run.outputs.should-run }}
-    
-    uses: ./.github/workflows/component-test.yml
-    with:
-      folder: EnrichStream
-      initial-kafka-topics: "EnrichStreamEnrichTopic EnrichStreamInputTopic EnrichStreamOutputTopic"
-    secrets:
-      PAT: ${{ secrets.PACKAGE_PAT }}
 
-  external-lookup-component-test:
-    name: External Lookup
-    needs: should-run
-    if: ${{ needs.should-run.outputs.should-run }}
-    
-    uses: ./.github/workflows/component-test.yml
-    with:
-      folder: ExternalLookup
-      initial-kafka-topics: "ExternalLookupInputTopic ExternalLookupOutputTopic"
-    secrets:
-      PAT: ${{ secrets.PACKAGE_PAT }}
+    strategy:
+      matrix:
+        include:
+          - folder: EnrichStream
+            initial-kafka-topics: "EnrichStreamEnrichTopic EnrichStreamInputTopic EnrichStreamOutputTopic"
+            
+          - folder: ExternalLookup
+            initial-kafka-topics: "ExternalLookupInputTopic ExternalLookupOutputTopic"
+            
+          - folder: FlinkStates
+            initial-kafka-topics: "FlinkStatesInputTopic FlinkStatesOutputTopic-value FlinkStatesOutputTopic-reducing FlinkStatesOutputTopic-aggregating FlinkStatesOutputTopic-list FlinkStatesOutputTopic-map"
+            
+          - folder: MultipleSideOutput
+            initial-kafka-topics: "MultipleSideOutputExampleInputTopic OutputA-events OutputB-events OutputCD-events"
+            
+          - folder: Observability
+            initial-kafka-topics: "ObservabilityInputTopic"
+            
+          - folder: SerializationErrorCatch
+            initial-kafka-topics: "SerializationErrorCatchInputTopic SerializationErrorCatchInputTopic SerializationErrorCatchOutputTopic"
+            
+          - folder: TransformAndStore
+            initial-kafka-topics: "TransformAndStoreInputTopic"
+            
+          - folder: TumblingWindow
+            initial-kafka-topics: "TumblingWindowInputTopic TumblingWindowOutputTopic"
 
-  flink-states-component-test:
-    name: Flink States
-    needs: should-run
-    if: ${{ needs.should-run.outputs.should-run }}
-    
     uses: ./.github/workflows/component-test.yml
     with:
-      folder: FlinkStates
-      initial-kafka-topics: "FlinkStatesInputTopic FlinkStatesOutputTopic-value FlinkStatesOutputTopic-reducing FlinkStatesOutputTopic-aggregating FlinkStatesOutputTopic-list FlinkStatesOutputTopic-map"
-    secrets:
-      PAT: ${{ secrets.PACKAGE_PAT }}
-
-  multiple-side-outputs-component-test:
-    name: Multiple Side Outputs
-    needs: should-run
-    if: ${{ needs.should-run.outputs.should-run }}
-    
-    uses: ./.github/workflows/component-test.yml
-    with:
-      folder: MultipleSideOutput
-      initial-kafka-topics: "MultipleSideOutputExampleInputTopic OutputA-events OutputB-events OutputCD-events"
-    secrets:
-      PAT: ${{ secrets.PACKAGE_PAT }}
-
-  observability-outputs-component-test:
-    name: Observability
-    needs: should-run
-    if: ${{ needs.should-run.outputs.should-run }}
-    
-    uses: ./.github/workflows/component-test.yml
-    with:
-      folder: Observability
-      initial-kafka-topics: "ObservabilityInputTopic"
-    secrets:
-      PAT: ${{ secrets.PACKAGE_PAT }}
-
-  serialization-error-catch-component-test:
-    name: Serialization Error Catch
-    needs: should-run
-    if: ${{ needs.should-run.outputs.should-run }}
-    
-    uses: ./.github/workflows/component-test.yml
-    with:
-      folder: SerializationErrorCatch
-      initial-kafka-topics: "SerializationErrorCatchInputTopic SerializationErrorCatchInputTopic SerializationErrorCatchOutputTopic"
-    secrets:
-      PAT: ${{ secrets.PACKAGE_PAT }}
-
-  transform-and-store-component-test:
-    name: Transform and Store
-    needs: should-run
-    if: ${{ needs.should-run.outputs.should-run }}
-    
-    uses: ./.github/workflows/component-test.yml
-    with:
-      folder: TransformAndStore
-      initial-kafka-topics: "TransformAndStoreInputTopic"
-    secrets:
-      PAT: ${{ secrets.PACKAGE_PAT }}
-
-  tumbling-window-component-test:
-    name: Tumbling Window
-    needs: should-run
-    if: ${{ needs.should-run.outputs.should-run }}
-    
-    uses: ./.github/workflows/component-test.yml
-    with:
-      folder: TumblingWindow
-      initial-kafka-topics: "TumblingWindowInputTopic TumblingWindowOutputTopic"
-    secrets:
-      PAT: ${{ secrets.PACKAGE_PAT }}
+      folder: ${{ matrix.folder }}
+      initial-kafka-topics: ${{ matrix.initial-kafka-topics }}
