--- a/.github/workflows/run-component-tests.yml
+++ b/.github/workflows/run-component-tests.yml
@@ -55,3 +55,5 @@ jobs:
     with:
       folder: ${{ matrix.folder }}
       initial-kafka-topics: ${{ matrix.initial-kafka-topics }}
+    secrets:
+      PAT: ${{ secrets.PACKAGE_PAT }}
