--- a/.github/actions/component-test/action.yml
+++ b/.github/actions/component-test/action.yml
@@ -26,6 +26,7 @@ runs:
       uses: actions/checkout@v4
       with:
         repository: trifork/cheetah-development-infrastructure
+        ref: v1.1.0
         token: ${{ inputs.access-token }}
         path: development-infrastructure
 
