--- a/FlinkStates/pom.xml
+++ b/FlinkStates/pom.xml
@@ -85,6 +85,13 @@ under the License.
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+            <scope>compile</scope>
+        </dependency>
+
 
         <!--  -->
 
