--- a/JsonToAvro/pom.xml
+++ b/JsonToAvro/pom.xml
@@ -56,6 +56,7 @@ under the License.
             <url>https://maven.pkg.github.com/trifork/cheetah-lib-processing</url>
             <snapshots>
                 <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
             </snapshots>
             <releases>
                 <enabled>true</enabled>
