--- a/JsonToAvro/pom.xml
+++ b/JsonToAvro/pom.xml
@@ -21,7 +21,7 @@ under the License.
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cheetah.exmaple</groupId>
+    <groupId>cheetah.example</groupId>
     <artifactId>jsonToAvro</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
