--- a/JsonToAvro/pom.xml
+++ b/JsonToAvro/pom.xml
@@ -111,6 +111,11 @@ under the License.
             <artifactId>avro</artifactId>
             <version>${avro.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.16.0</version>
+        </dependency>
 
         <!-- Test -->
         <dependency>
