--- a/FlinkStates/pom.xml
+++ b/FlinkStates/pom.xml
@@ -108,6 +108,13 @@ under the License.
 
         <dependency>
             <groupId>org.apache.flink</groupId>
+            <artifactId>flink-sql-connector-kafka</artifactId>
+            <version>${flink.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
             <artifactId>flink-sql-client</artifactId>
             <version>${flink.version}</version>
             <scope>compile</scope>
