--- a/.github/workflows/run-component-tests.yml
+++ b/.github/workflows/run-component-tests.yml
@@ -55,6 +55,9 @@ jobs:
           - folder: TumblingWindow
             initial-kafka-topics: "TumblingWindowInputTopic TumblingWindowOutputTopic"
 
+          - folder: KeySerializationSchema
+            initial-kafka-topics: "KeySerializationSchemaInputTopic KeySerializationSchemaOutputTopic"
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
