--- a/SerializationErrorCatch/pom.xml
+++ b/SerializationErrorCatch/pom.xml
@@ -50,6 +50,7 @@ under the License.
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
             <version>4.1.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
