--- a/TumblingWindow/Dockerfile
+++ b/TumblingWindow/Dockerfile
@@ -37,7 +37,7 @@ RUN --mount=type=secret,id=GITHUB_TOKEN \
 #
 FROM flink:1.18.1-scala_2.12-java17 as runtime
 
-COPY --from=build /app/target/tumblingwindow*.jar /opt/flink/usrlib/artifacts/
+COPY --from=build /app/target/tumblingwindow*.jar /opt/flink/usrlib/artifacts/tumblingwindow.jar
 
 RUN mkdir /opt/flink/plugins/s3-fs-hadoop/; \
     mkdir /opt/flink/plugins/s3-fs-presto/; \
